fix: update do ssh-keys generator default stack config

--- a/generators/do-ssh-keys/templates/do-ssh-keys/Pulumi.global.yaml
+++ b/generators/do-ssh-keys/templates/do-ssh-keys/Pulumi.global.yaml
@@ -1,12 +1,8 @@
 config:
   digitalocean-ssh-keys:key-folder: "../ssh-keys"
   digitalocean-ssh-keys:key-names:
-    - deepak 
-    - op@mbp3 
-    - op@mmintel
-    - prem
-    - ramesh 
-    - semanta 
-    - uddhab
+    - key1 
+    - key2 
+    - ...
   digitalocean-ssh-keys:protect: "true"
   digitalocean-ssh-keys:retainOnDelete: "true"
