--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "yosay": "3.0.0"
   },
   "devDependencies": {
-    "chalk": "4.1.2",
-    "eslint": "8.57.0",
+    "chalk": "5.3.0",
+    "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-xo": "0.44.0",
     "eslint-plugin-prettier": "5.1.3",
@@ -57,10 +57,10 @@
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "1.9.1"
+    "yeoman-test": "8.2.0"
   },
   "type":"module",
   "engines": {
-    "node": ">=16.0.0"
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   }
 }
