--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "generator-dzangolab-iac",
   "version": "0.1.0",
   "description": "",
-  "keywords": ["devops", "yeoman-generator"],
+  "keywords": [
+    "devops",
+    "yeoman-generator"
+  ],
   "homepage": "",
   "repository": "generator-dzangolab-iac",
   "license": "MIT",
@@ -12,7 +15,9 @@
     "url": "https://dzango.com"
   },
   "exports": "./generators/app/index.js",
-  "files": ["generators"],
+  "files": [
+    "generators"
+  ],
   "scripts": {
     "sort-package": "npx sort-package-json",
     "pretest": "eslint .",
@@ -24,16 +29,27 @@
     }
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "env": {
       "jest": true,
       "node": true
     },
-    "plugins": ["prettier"],
-    "extends": ["xo", "prettier"],
+    "plugins": [
+      "prettier"
+    ],
+    "extends": [
+      "xo",
+      "prettier"
+    ],
     "rules": {
       "prettier/prettier": "error"
     }
@@ -56,10 +72,11 @@
     "jest": "29.7.0",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
+    "shipjs": "0.26.3",
     "yeoman-assert": "3.1.1",
     "yeoman-test": "8.2.0"
   },
-  "type":"module",
+  "type": "module",
   "engines": {
     "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   }
