--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "generator-dzangolab-iac",
   "version": "0.1.0",
   "description": "",
-  "keywords": ["devops", "yeoman-generator"],
+  "keywords": [
+    "devops",
+    "yeoman-generator"
+  ],
   "homepage": "",
   "repository": "generator-dzangolab-iac",
   "license": "MIT",
@@ -11,32 +14,19 @@
     "email": "info@dzango.com",
     "url": "https://dzango.com"
   },
+  "type": "module",
   "exports": "./generators/app/index.js",
-  "files": ["generators"],
+  "files": [
+    "generators"
+  ],
   "scripts": {
+    "commitlint": "node @commitlint/prompt-cli/cli.js",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "prepare": "husky",
     "sort-package": "npx sort-package-json",
     "pretest": "eslint .",
     "test": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
-  },
-  "eslintConfig": {
-    "env": {
-      "jest": true,
-      "node": true
-    },
-    "plugins": ["prettier"],
-    "extends": ["xo", "prettier"],
-    "rules": {
-      "prettier/prettier": "error"
-    }
   },
   "jest": {
     "testEnvironment": "node"
@@ -47,19 +37,30 @@
     "yosay": "3.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.2.2",
+    "@commitlint/config-conventional": "19.2.2",
+    "@eslint/eslintrc": "3.0.2",
+    "@eslint/js": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
     "chalk": "5.3.0",
-    "eslint": "9.0.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard-with-typescript": "43.0.1",
     "eslint-config-xo": "0.44.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-n": "16.6.2",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.1.1",
+    "globals": "15.0.0",
     "husky": "9.0.11",
     "jest": "29.7.0",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.6.0",
     "yeoman-assert": "3.1.1",
     "yeoman-test": "8.2.0"
   },
-  "type":"module",
   "engines": {
     "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   }
