fix(aws/ebs): fix aws ebs generator default config

--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.production.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.production.yaml
@@ -1,3 +1,8 @@
 config:
+  aws-ebs:availabilityZones: 
+    - ap-southeast-1a
+    - ap-southeast-1b
+    - ap-southeast-1c
   aws-ebs:protect: false
   aws-ebs:retainOnDelete: false
+  aws-ebs:suffix: "YYYYMMDD"
