--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.staging.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.staging.yaml
@@ -1,6 +1,6 @@
 config:
   aws-ebs:availabilityZones: 
-    - ap-soutehast-1a
+    - ap-southeast-1a
     - ap-southeast-1b
     - ap-southeast-1c
   aws-ebs:protect: false
