--- a/generators/ansible/templates/ansible/staging/group_vars/all.yml
+++ b/generators/ansible/templates/ansible/staging/group_vars/all.yml
@@ -1,11 +1,14 @@
 aws_secrets_id: SECRET_ID
 
 deploy_dir: /mnt/data
-deploy_group: USERNAME
-deploy_user: USERNAME
+deploy_group: adm
+deploy_user: ec2-user
 
 domain: DOMAIN
 
 network: public
 
-ssh_key_folder: ../../ssh-keys
+ssh_key_folder: ../../../../ssh-keys
+ssh_keys:
+ - SSH_KEY_1
+ - SSH_KEY_2
