--- a/generators/ansible/templates/ansible/staging/plays/ssh-keys.yml
+++ b/generators/ansible/templates/ansible/staging/plays/ssh-keys.yml
@@ -14,6 +14,6 @@
       key: "{{ keys | join(newline) }}"
       manage_dir: false
       state: present
-      user: {{ username }}
+      user: {{ deploy_user }}
     vars: 
       - newline: "\n"
