--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.production.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.production.yaml
@@ -2,7 +2,7 @@ config:
   aws-swarm-leader:ami: ami-XXXXXXXXXXXXXXXXX
   aws-swarm-leader:availabilityZone: ap-southeast-1c
   aws-swarm-leader:disableApiTermination: false
-  aws-swarm-leader:instanceType: t2.micro
+  aws-swarm-leader:instanceType: t3.medium
   aws-swarm-leader:keyName: KEYNAME
   aws-swarm-leader:retainOnDelete: false
   aws-swarm-leader:rootBlockDeviceSize: 20
