feat: update ansible generators

--- a/generators/ansible-do/templates/ansible/staging/plays/data-dirs.yml
+++ b/generators/ansible-do/templates/ansible/staging/plays/data-dirs.yml
@@ -11,9 +11,9 @@
         recurse: true
       with_items:
         - "{{ deploy_dir }}/postgres"
-        - "{{ deploy_dir }}/postgres/14"
-        - "{{ deploy_dir }}/postgres/14/backups"
-        - "{{ deploy_dir }}/postgres/14/data"
+        - "{{ deploy_dir }}/postgres/{{ postgres_version }}"
+        - "{{ deploy_dir }}/postgres/{{ postgres_version }}/backups"
+        - "{{ deploy_dir }}/postgres/{{ postgres_version }}/data"
   tags:
     - postgres
 
@@ -32,19 +32,5 @@
         - "{{ deploy_dir }}/minio/data"
   tags:
     - minio
-
-- name: Create nocodb data directories
-  hosts: leader
-  become: true
-  tasks:
-    - file:
-        group: "{{ deploy_group }}"
-        owner: "{{ deploy_user }}"
-        path: "{{ item }}"
-        state: directory
-        recurse: true
-      with_items:
-        - "{{ deploy_dir }}/nocodb"
-        - "{{ deploy_dir }}/nocodb/data"
-  tags:
-    - nocodb
+  when:
+    - minio_enabled
