--- a/generators/ansible-aws/templates/ansible/staging/group_vars/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/staging/group_vars/traefik.yml
@@ -1,9 +1,8 @@
-traefik__acme_email: op+develop@dzango.com
+traefik__acme_email: op+staging@dzango.com
 traefik__deploy_dir: "{{ deploy_dir }}/traefik"
 traefik__deploy_group: "{{ deploy_group }}"
 traefik__deploy_user: "{{ deploy_user }}"
 traefik__domain: "traefik.{{ domain }}"
-traefik__image: "traefik:v2.10.3"
 traefik__label: "traefik"
 traefik__log_level: "ERROR"
 traefik__network: "{{ network }}"
