--- a/generators/ansible-do/templates/ansible/staging/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/staging/group_vars/all.yml
@@ -2,11 +2,16 @@ aws_secrets_id: SECRET_ID
 
 deploy_dir: /mnt/data
 deploy_group: adm
-deploy_user: ec2-user
+deploy_user: USERNAME
 
 domain: DOMAIN
 
-network: public
+minio_enabled: false
+
+network_private: private
+network_traefik: traefik
+
+postgres_version: 16
 
 ssh_key_folder: ../../../../ssh-keys
 ssh_keys:
