--- a/generators/ansible-do/templates/ansible/staging/group_vars/portainer.yml
+++ b/generators/ansible-do/templates/ansible/staging/group_vars/portainer.yml
@@ -3,5 +3,5 @@ portainer__deploy_group: "{{ deploy_group }}"
 portainer__deploy_user: "{{ deploy_user }}"
 portainer__domain: "portainer.{{ domain }}"
 portainer__label: "portainer"
-portainer__network: "{{ network }}"
+portainer__network: "{{ network_traefik }}"
 portainer__state: "started"
