--- a/generators/ansible-do/templates/ansible/staging/group_vars/traefik.yml
+++ b/generators/ansible-do/templates/ansible/staging/group_vars/traefik.yml
@@ -5,5 +5,5 @@ traefik__deploy_user: "{{ deploy_user }}"
 traefik__domain: "traefik.{{ domain }}"
 traefik__label: "traefik"
 traefik__log_level: "ERROR"
-traefik__network: "{{ network }}"
+traefik__network: "{{ network_traefik }}"
 traefik__state: "started"
