--- a/generators/aws-github-identity-provider/templates/aws-github-identity-provider/package.json
+++ b/generators/aws-github-identity-provider/templates/aws-github-identity-provider/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "aws-github-identity-provider",
+    "name": "<%= projectName %>",
     "main": "index.ts",
     "dependencies": {
         "@dzangolab/pulumi": "^0.28",
