--- a/generators/aws-ssh-keypairs/templates/aws-ssh-keypairs/package.json
+++ b/generators/aws-ssh-keypairs/templates/aws-ssh-keypairs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-ssh-keypairs",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@pulumi/awsx": "^2.6",
