--- a/generators/do-ssh-keys/templates/do-ssh-keys/package.json
+++ b/generators/do-ssh-keys/templates/do-ssh-keys/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "digitalocean-ssh-keys",
+    "name": "<%= projectName %>",
     "main": "index.ts",
     "dependencies": {
         "@pulumi/digitalocean": "^4",
