--- a/generators/do-swarm-leader/templates/do-swarm-leader/package.json
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digitalocean-swarm-leader",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@dzangolab/pulumi": "^0.28",
