--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.production.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.production.yaml
@@ -1,10 +1,10 @@
 config:
-  aws-credentials:passwords:
+  <%= projectName %>:passwords:
     # - mariadb-root
     # - nocodb
     - postgres
     - traefik-dashboard
-  aws-credentials:protect: "true"
-  aws-credentials:retainOnDelete: "true"
-  aws-credentials:sesSmtpUser: "true"
-  aws-credentials:timestamp: "YYYYMMDDHHSS"
+  <%= projectName %>:protect: "true"
+  <%= projectName %>:retainOnDelete: "true"
+  <%= projectName %>:sesSmtpUser: "true"
+  <%= projectName %>:timestamp: "YYYYMMDDHHSS"
