--- a/generators/aws-credentials/templates/aws-credentials/package.json
+++ b/generators/aws-credentials/templates/aws-credentials/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-credentials",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@dzangolab/pulumi": "^0.28",
