--- a/generators/aws-eip/templates/aws-eip/Pulumi.production.yaml
+++ b/generators/aws-eip/templates/aws-eip/Pulumi.production.yaml
@@ -1,3 +1,3 @@
 config:
-  aws-eip:protect: false
-  aws-eip:retainOnDelete: false
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false
