--- a/generators/aws-resources/templates/aws-resources/package.json
+++ b/generators/aws-resources/templates/aws-resources/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-resources",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@dzangolab/pulumi": "^0.28",
