--- a/generators/aws-route53/templates/aws-route53/Pulumi.production.yaml
+++ b/generators/aws-route53/templates/aws-route53/Pulumi.production.yaml
@@ -1,4 +1,4 @@
 config:
-  aws-route53:domain: MYDOMAIN.COM
-  aws-route53:protect: false
-  aws-route53:retainOnDelete: false
+  <%= projectName %>:domain: MYDOMAIN.COM
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false
