--- a/generators/aws-route53/templates/aws-route53/Pulumi.staging.yaml
+++ b/generators/aws-route53/templates/aws-route53/Pulumi.staging.yaml
@@ -1,6 +1,6 @@
 config:
-  aws-route53:aliases: 
+  <%= projectName %>:aliases: 
     - "*"
-  aws-route53:domain: MYDOMAIN.COM
-  aws-route53:protect: false
-  aws-route53:retainOnDelete: false
+  <%= projectName %>:domain: MYDOMAIN.COM
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false
