--- a/generators/aws-security-group/templates/aws-security-group/Pulumi.production.yaml
+++ b/generators/aws-security-group/templates/aws-security-group/Pulumi.production.yaml
@@ -1,3 +1,3 @@
 config:
-  aws-security-group:protect: false
-  aws-security-group:retainOnDelete: false
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false
