--- a/generators/aws-security-group/templates/aws-security-group/Pulumi.staging.yaml
+++ b/generators/aws-security-group/templates/aws-security-group/Pulumi.staging.yaml
@@ -1,4 +1,4 @@
 config:
-  aws-security-group:protect: false
-  aws-security-group:retainOnDelete: false
-  aws-security-group:suffix: "YYYYMMDD"
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false
+  <%= projectName %>:suffix: "YYYYMMDD"
