--- a/generators/aws-security-group/templates/aws-security-group/package.json
+++ b/generators/aws-security-group/templates/aws-security-group/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-security-group",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@pulumi/aws": "^6",
