--- a/generators/aws-ssh-keypairs/templates/aws-ssh-keypairs/Pulumi.global.yaml
+++ b/generators/aws-ssh-keypairs/templates/aws-ssh-keypairs/Pulumi.global.yaml
@@ -1,8 +1,8 @@
 config:
-  aws-ssh-keypairs:keyFolder: "../ssh-keys"
-  aws-ssh-keypairs:keyNames: 
+  <%= projectName %>:keyFolder: "../ssh-keys"
+  <%= projectName %>:keyNames: 
     - key1 
     - key2 
     - ...
-  aws-ssh-keypairs:protect: false
-  aws-ssh-keypairs:retainOnDelete: false  
+  <%= projectName %>:protect: false
+  <%= projectName %>:retainOnDelete: false  
