--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/package.json
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-swarm-leader",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@pulumi/aws": "^6.0",
