--- a/generators/aws-vpc/templates/aws-vpc/Pulumi.production.yaml
+++ b/generators/aws-vpc/templates/aws-vpc/Pulumi.production.yaml
@@ -1,8 +1,8 @@
 config:
-  aws-vpc:cidrBlock: 10.0.0.0 
-  aws-vpc:protect: "false"
-  aws-vpc:retainOnDelete: "false"
-  aws-vpc:subnetSpecs:
+  <%= projectName %>:cidrBlock: 10.0.0.0 
+  <%= projectName %>:protect: "false"
+  <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:subnetSpecs:
     - cidrBlocks: 
       - 10.0.0.0/19
       - 10.0.64.0/19
@@ -15,4 +15,4 @@ config:
       - 10.0.160.0/21
       name: production-YYYYMMDD-public
       type: Public
-  aws-vc:suffix: "YYYYMMDD"
+  <%= projectName %>:suffix: "YYYYMMDD"
