--- a/generators/aws-vpc/templates/aws-vpc/Pulumi.staging.yaml
+++ b/generators/aws-vpc/templates/aws-vpc/Pulumi.staging.yaml
@@ -1,7 +1,7 @@
 config:
-  aws-vpc:protect: "false"
-  aws-vpc:retainOnDelete: "false"
-  aws-vpc:subnetSpecs:
+  <%= projectName %>:protect: "false"
+  <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:subnetSpecs:
     - cidrBlocks: 
       - 10.0.0.0/19
       - 10.0.64.0/19
@@ -14,4 +14,4 @@ config:
       - 10.0.160.0/21
       name: staging-YYYYMMDD-public
       type: Public
-  aws-vc:suffix: "YYYYMMDD"
+  <%= projectName %>:suffix: "YYYYMMDD"
