--- a/generators/cloudflare-dns/templates/cloudflare-dns/Pulumi.prod.yaml
+++ b/generators/cloudflare-dns/templates/cloudflare-dns/Pulumi.prod.yaml
@@ -1,12 +1,12 @@
 config:
-  cloudflare-dns:aliases:
+  <%= projectName %>:aliases:
     - adminer
     - mail
     - pma
     - portainer
     - traefik
-  cloudflare-dns:domain: DOMAIN
-  cloudflare-dns:host: HOST
-  cloudflare-dns:ip: IP
-  cloudflare-dns:protect: "true"
-  cloudflare-dns:retainOnDelete: "true"
+  <%= projectName %>:domain: DOMAIN
+  <%= projectName %>:host: HOST
+  <%= projectName %>:ip: IP
+  <%= projectName %>:protect: "true"
+  <%= projectName %>:retainOnDelete: "true"
