--- a/generators/do-database-cluster/templates/do-database-cluster/Pulumi.production.yaml
+++ b/generators/do-database-cluster/templates/do-database-cluster/Pulumi.production.yaml
@@ -1,9 +1,9 @@
 config:
-  do-database-cluster:engine: "pg"
-  do-database-cluster:nameSuffix: "YYYYMMDD"
-  do-database-cluster:nodeCount: 1
-  do-database-cluster:protect: "false"
-  do-database-cluster:region: "sgp1"
-  do-database-cluster:retainOnDelete: "false"
-  do-database-cluster:size: "db-s-1vcpu-1gb"
-  do-database-cluster:version: "16"
+  <%= projectName %>:engine: "pg"
+  <%= projectName %>:nameSuffix: "YYYYMMDD"
+  <%= projectName %>:nodeCount: 1
+  <%= projectName %>:protect: "false"
+  <%= projectName %>:region: "sgp1"
+  <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:size: "db-s-1vcpu-1gb"
+  <%= projectName %>:version: "16"
