--- a/generators/do-database-cluster/templates/do-database-cluster/package.json
+++ b/generators/do-database-cluster/templates/do-database-cluster/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "do-database-cluster",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@pulumi/digitalocean": "^4",
