--- a/generators/do-resources/templates/do-resources/package.json
+++ b/generators/do-resources/templates/do-resources/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swarm-do-resources",
+  "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
     "@pulumi/digitalocean": "^4",
