--- a/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.production.yaml
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.production.yaml
@@ -1,10 +1,10 @@
 
   aws:region: ap-southeast-1
-  digitalocean-swarm-leader:image: docker-20-04
-  digitalocean-swarm-leader:protect: "false"
-  digitalocean-swarm-leader:publicKeyNames:
+  <%= projectName %>:image: docker-20-04
+  <%= projectName %>:protect: "false"
+  <%= projectName %>:publicKeyNames:
     - KEY_NAME
-  digitalocean-swarm-leader:region: sgp1
-  digitalocean-swarm-leader:retainOnDelete: "false"
-  digitalocean-swarm-leader:size: s-1vcpu-1gb
-  digitalocean-swarm-leader:username: USERNAME
+  <%= projectName %>:region: sgp1
+  <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:size: s-1vcpu-1gb
+  <%= projectName %>:username: USERNAME
