fix(aws/s3): refactor AWS S3 generator

--- a/generators/aws-s3/templates/aws-s3/Pulumi.production.yaml
+++ b/generators/aws-s3/templates/aws-s3/Pulumi.production.yaml
@@ -1,6 +1,10 @@
 config:
   <%= projectName %>:buckets: 
-    - BUCKET
-    - ...
+    NAME: BUCKET_NAME
+    ...
+  <%= projectName %>:folders: 
+    NAME:
+      - ...
+      - ...
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false  
