fix: fix name stackconfig setting

--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -1,4 +1,5 @@
 config:
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:passwords:
     # - mariadb-root
     - minio-root
