--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
@@ -3,6 +3,7 @@ config:
     - ap-southeast-1a
     - ap-southeast-1b
     - ap-southeast-1c
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
   <%= projectName %>:suffix: "YYYYMMDD"
