--- a/generators/aws-eip/templates/aws-eip/Pulumi.stack.yaml
+++ b/generators/aws-eip/templates/aws-eip/Pulumi.stack.yaml
@@ -1,3 +1,4 @@
 config:
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
