--- a/generators/aws-github-identity-provider/templates/aws-github-identity-provider/Pulumi.stack.yaml
+++ b/generators/aws-github-identity-provider/templates/aws-github-identity-provider/Pulumi.stack.yaml
@@ -1,4 +1,5 @@
 config:
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:policyArns:
     - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser
   <%= projectName %>:protect: false
