--- a/generators/aws-resources/templates/aws-resources/Pulumi.stack.yaml
+++ b/generators/aws-resources/templates/aws-resources/Pulumi.stack.yaml
@@ -1,4 +1,5 @@
 config:
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "true"
   <%= projectName %>:retainOnDelete: "true"
   <%= projectName %>:secretRecoveryWindowInDays: 7
