--- a/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
+++ b/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
@@ -2,5 +2,6 @@ config:
   <%= projectName %>:aliases: 
     - "*"
   <%= projectName %>:domain: MYDOMAIN.COM
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
