--- a/generators/do-database-cluster/templates/do-database-cluster/Pulumi.stack.yaml
+++ b/generators/do-database-cluster/templates/do-database-cluster/Pulumi.stack.yaml
@@ -1,5 +1,6 @@
 config:
   <%= projectName %>:engine: "pg"
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:nameSuffix: "YYYYMMDD"
   <%= projectName %>:nodeCount: 1
   <%= projectName %>:protect: "false"
