--- a/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
+++ b/generators/do-swarm-leader/templates/do-swarm-leader/Pulumi.stack.yaml
@@ -1,6 +1,8 @@
 config:
   aws:region: ap-southeast-1
+  <%= projectName %>:doResourcesProject: <%= prefix %>-do-resources
   <%= projectName %>:image: docker-20-04
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
