fix(aws/vpc): fix AWS VPC generator

--- a/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
+++ b/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
@@ -7,12 +7,12 @@ config:
       - 10.0.0.0/19
       - 10.0.64.0/19
       - 10.0.128.0/19
-      name: staging-YYYYMMDD-private
+      name: private
       type: Private
     - cidrBlocks: 
       - 10.0.32.0/21
       - 10.0.96.0/21
       - 10.0.160.0/21
-      name: staging-YYYYMMDD-public
+      name: public
       type: Public
   <%= projectName %>:suffix: "YYYYMMDD"
