--- a/package.json
+++ b/package.json
@@ -33,37 +33,28 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "yeoman-environment": "4.4.0",
-    "yeoman-generator": "7.1.1",
+    "yeoman-environment": "4.4.1",
+    "yeoman-generator": "7.3.2",
     "yosay": "3.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.2.2",
-    "@commitlint/config-conventional": "19.2.2",
-    "@eslint/eslintrc": "3.0.2",
-    "@eslint/js": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
+    "@eslint/js": "9.10.0",
     "chalk": "5.3.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard-with-typescript": "43.0.1",
-    "eslint-config-xo": "0.44.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
-    "globals": "15.0.0",
-    "husky": "9.0.11",
+    "eslint": "9.10.0",
+    "eslint-plugin-n": "17.10.3",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-promise": "7.1.0",
+    "husky": "9.1.6",
     "jest": "29.7.0",
-    "lint-staged": "15.2.2",
-    "prettier": "3.2.5",
-    "shipjs": "0.26.3",
-    "typescript": "5.4.5",
-    "typescript-eslint": "7.6.0",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
+    "shipjs": "0.26.4",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "8.2.0"
+    "yeoman-test": "9.1.0"
   },
   "engines": {
-    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
+    "node": "^20.9.0 || >=21.1.0"
   }
 }
