fix(aws/security-group): fix typo

--- a/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
+++ b/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
@@ -3,4 +3,4 @@ config:
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
   <%= projectName %>:suffix: "YYYYMMDD"
-  <%= projectName %>:vpcProject>: <%= prefix %>-aws-vpc
+  <%= projectName %>:vpcProject: <%= prefix %>-aws-vpc
