--- a/generators/ansible-aws/templates/ansible/stack/plays/docker.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create docker networks
-  hosts: leader
+  hosts: managers[0]
   tasks:
     - command: "docker network create -d overlay --attachable {{ item }}"
       ignore_errors: yes
@@ -8,99 +8,30 @@
         - "{{ network_private }}"
         - "{{ network_traefik }}"
   tags:
-    - docker-network
+    - docker-networks
 
-- name: Label db node
-  hosts: db
+- name: Label nodes
+  hosts: all
   tasks:
     - name: Get node id
       command: "docker info -f {% raw %}'{{.Swarm.NodeID}}'{% endraw %}"
       register: node_id
     - name: label_node
-      command: "docker node update --label-add db=true {{ node_id.stdout }}"
+      command: "docker node update --label-add {{ item }}=true {{ node_id.stdout }}"
       ignore_errors: yes
-  tags:
-    - docker-labels
-
-- name: Label portainer node
-  hosts: portainer
-  tasks:
-    - name: Get node id
-      command: "docker info -f {% raw %}'{{.Swarm.NodeID}}'{% endraw %}"
-      register: node_id
-    - name: label_node
-      command: "docker node update --label-add portainer=true {{ node_id.stdout }}"
-      ignore_errors: yes
-  tags:
-    - docker-labels
-
-- name: Label traefik node
-  hosts: traefik
-  tasks:
-    - name: Get node id
-      command: "docker info -f {% raw %}'{{.Swarm.NodeID}}'{% endraw %}"
-      register: node_id
-    - name: Label node
-      command: "docker node update --label-add traefik=true {{ node_id.stdout }}"
-      ignore_errors: yes
+      with_items: "{{ hostvars[inventory_hostname].labels }}"
   tags:
     - docker-labels
 
 - name: Setup cron jobs
-  hosts: all
+  hosts: managers[0]
   become: true
-  tasks:
-    - cron:
-        cron_file: "docker-cron"
-        user: "root"
-        name: "docker-cron"
-        minute: "0"
-        hour: "1"
-        job: "docker system prune -a -f --volumes"
+  roles:
+    - role: victy.ansible-systemd-timers
+  vars:
+    timers:
+      dockerPrune:
+        timer_command: /usr/bin/docker system prune -a -f --volumes
+        timer_OnCalendar: "*-*-* 00:13:25"
   tags:
     - docker-cron
-
-- name: Setup logrotate for docker container logs
-  hosts: all
-  become: true
-  tasks:
-    - blockinfile:
-        path: "/etc/logrotate.d/docker-container"
-        block: |
-          /var/lib/docker/containers/*/*.log {
-            compress
-            copytruncate
-            create
-            daily
-            dateext
-            dateformat -%Y%m%d
-            delaycompress
-            missingok
-            rotate 7
-          }
-        create: true
-  tags:
-    - docker-logrotate
-
-- name: Install local-persist docker volume driver
-  hosts: all
-  become: true
-  gather_facts: no
-  handlers:
-    - name: Restart portainer
-      command: "docker stack deploy -c portainer.yml portainer"
-      args:
-        chdir: "{{ deploy_dir }}"
-      ignore_errors: yes
-  tasks:
-    - get_url:
-        dest: "{{ deploy_dir }}/local-persist.sh"
-        mode: "0700"
-        url: https://raw.githubusercontent.com/CWSpear/local-persist/45c5c344d5dfd358c28d7148be48302d20456fac/scripts/install.sh
-      register: local_persist_installer
-    - command: "{{ local_persist_installer.dest }}"
-    - file:
-        path: "{{ local_persist_installer.dest }}"
-        state: absent
-  tags:
-    - docker-volume-driver
