--- a/generators/ansible-aws/templates/ansible/stack/plays/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/plays/traefik.yml
@@ -18,4 +18,4 @@
   roles:
     - role: dzangolab.docker_traefik
   vars:
-    - traefik__dashboard_basicauth_passwords: ["{{ traefik_dashboard_basicauth_password.stdout }}"]
+    traefik__dashboard_basicauth_passwords: ["{{ traefik_dashboard_basicauth_password.stdout }}"]
