--- a/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
+++ b/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
@@ -1,18 +1,19 @@
 config:
+  <%= projectName %>:cidrBlock: "172.16.0.0/16"
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:subnetSpecs:
     - cidrBlocks: 
-      - 10.0.0.0/19
-      - 10.0.64.0/19
-      - 10.0.128.0/19
+      - 172.16.0.0/19
+      - 172.16.64.0/19
+      - 172.16.128.0/19
       name: private
       type: Private
     - cidrBlocks: 
-      - 10.0.32.0/21
-      - 10.0.96.0/21
-      - 10.0.160.0/21
+      - 172.16.32.0/21
+      - 172.16.96.0/21
+      - 172.16.160.0/21
       name: public
       type: Public
   <%= projectName %>:suffix: "YYYYMMDD"
