--- a/generators/aws-github-identity-provider/templates/aws-github-identity-provider/package.json
+++ b/generators/aws-github-identity-provider/templates/aws-github-identity-provider/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "<%= projectName %>",
-    "main": "index.ts",
-    "dependencies": {
-        "@dzangolab/pulumi": "^0.28",
-        "@pulumi/aws": "^6",
-        "@pulumi/pulumi": "^3"
-    },
-    "devDependencies": {
-        "@types/node": "^20"
-    }
+  "name": "<%= projectName %>",
+  "main": "index.ts",
+  "dependencies": {
+    "@dzangolab/pulumi": "<%= versions.dzangolab %>",
+    "@pulumi/aws": "<%= versions.pulumi_aws %>",
+    "@pulumi/pulumi": "<%= versions.pulumi %>"
+  },
+  "devDependencies": {
+    "@types/node": "<%= versions.types_node %>"
+  }
 }
