--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/package.json
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/package.json
@@ -2,11 +2,11 @@
   "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
-    "@dzangolab/pulumi": "^0.28",
-    "@pulumi/aws": "^6",
-    "@pulumi/pulumi": "^3"
+    "@dzangolab/pulumi": "<%= versions.dzangolab %>",
+    "@pulumi/aws": "<%= versions.pulumi_aws %>",
+    "@pulumi/pulumi": "<%= versions.pulumi %>"
   },
   "devDependencies": {
-    "@types/node": "22"
+    "@types/node": "<%= versions.types_node %>"
   }
 }
