--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -9,6 +9,7 @@ config:
   <%= projectName %>:keyName: KEYNAME
   <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
+  <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
   <%= projectName %>:rootBlockDeviceSize: 20
   <%= projectName %>:securityGroupProject: <%= prefix %>-aws-security-group
