fix(aws/ansible): fix aws ansible generator

--- a/generators/ansible-aws/templates/ansible/stack/ansible.cfg
+++ b/generators/ansible-aws/templates/ansible/stack/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
+ansible_python_interpreter = /usr/bin/python3
 host_key_auto_add = True
 host_key_checking = False
-inventory = ./hosts
+inventory = ./inventory
+remote_user = ec2-user
 retry_files_save_path = ./.ansible-retry
 roles_path = ./roles
