--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/all.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/all.yml
@@ -1,5 +1,3 @@
-aws_secrets_id: SECRET_ID
-
 deploy_dir: /mnt/data
 deploy_group: adm
 deploy_user: ec2-user
@@ -9,13 +7,10 @@ domain: DOMAIN
 minio_enabled: false
 
 network_private: private
-network_traefik: traefik
+network_traefik: public
 
 postgres_version: 16
-
-private_ip: LEADER_PRIVATE_IP
-
-ssh_key_folder: ../../../../ssh-keys
+s
+ssh_key_folder: ../../../../global/ssh-keys
 ssh_keys:
- - SSH_KEY_1
- - SSH_KEY_2
+ - 
