--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/all.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/all.yml
@@ -10,7 +10,7 @@ network_private: private
 network_traefik: public
 
 postgres_version: 16
-s
+
 ssh_key_folder: ../../../../global/ssh-keys
 ssh_keys:
- - 
+ - SSH_KEY_NAME
