--- a/generators/ansible-aws/templates/ansible/stack/makefile
+++ b/generators/ansible-aws/templates/ansible/stack/makefile
@@ -1,24 +1,12 @@
 #!make
 
-dirs.mariadb:
-	@printf "\033[0;32m>>> Create mariadb database directories\033[0m\n"
-	ansible-playbook plays/data-dirs.yml --tags mariadb
-
 dirs.minio:
 	@printf "\033[0;32m>>> Create minio database directories\033[0m\n"
 	ansible-playbook plays/data-dirs.yml --tags minio
 
-dirs.nocodb:
-	@printf "\033[0;32m>>> Create nocodb data directories\033[0m\n"
-	ansible-playbook plays/data-dirs.yml --tags nocodb
-
 dirs.postgres:
 	@printf "\033[0;32m>>> Create postgres database directories\033[0m\n"
 	ansible-playbook plays/data-dirs.yml --tags postgres
-
-docker.data-folder:
-	@printf "\033[0;32m>>> Change docker data folder\033[0m\n"
-	ansible-playbook plays/docker-data-dir.yml
 
 install:
 	@printf "\033[0;32m>>> Install ansible roles\033[0m\n"
@@ -27,10 +15,6 @@ install:
 portainer.down:
 	@printf "\033[0;32m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml --extra-vars="portainer__state=stopped"
-
-setup.awscli:
-	@printf "\033[0;3ansible/2m>>> Set up awscli\033[0m\n"
-	ansible-playbook plays/awscli.yml --tags "awscli"
 
 setup.docker:
 	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
@@ -53,7 +37,7 @@ setup.portainer:
 	ansible-playbook plays/portainer.yml
 
 setup.swarm:
-	@printf "\033[0;3ansible/2m>>> Set up docekr swarm\033[0m\n"
+	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/swarm.yml
 
 setup.traefik:
