--- a/generators/aws-swarm-nodes/templates/aws-swarm-nodes/package.json
+++ b/generators/aws-swarm-nodes/templates/aws-swarm-nodes/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@pulumi/aws": "<%= versions.pulumi_aws %>",
     "@pulumi/command": "^0.9",
-    "@pulumi/pulumi": "<%= versions.pulumi %>"
+    "@pulumi/pulumi": "<%= versions.pulumi %>",
     "@types/nunjucks": "^3",
     "nunjucks": "^3"
   },
