--- a/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
@@ -8,5 +8,7 @@
 
 - name: Install aws-cli
   hosts: awscli
+  collections:
+    - dzangolab.ansible
   roles:
-    - role: dzangolab.awscli2
+    - awscli2
