--- a/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/portainer.yml
@@ -2,5 +2,7 @@
 
 - name: Deploy portainer
   hosts: all
+  collections:
+    - dzangolab.ansible
   roles:
-    - role: dzangolab.docker_portainer
+    - docker_portainer
