chore:  changed the way we use ansible collection using FQCN and a requirements file

--- a/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/awscli.yml
@@ -8,7 +8,7 @@
 
 - name: Install aws-cli
   hosts: awscli
-  collections:
-    - dzangolab.ansible
-  roles:
-    - awscli2
+  tasks:
+    - name: Import awscli2 from dzangolab collection
+      ansible.builtin.import_role:
+        name: dzangolab.ansible.awscli2
