chore: changed docs change cloud config, and pulumi file

--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -1,6 +1,6 @@
 config:
   aws:region: ap-southeast-1
-  <%= projectName %>:doResourcesProject: <%= prefix %>-do-swarm-wokers
+  <%= projectName %>:doResourcesProject: <%= prefix %>-do-resources
   <%= projectName %>:image: docker-20-04
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
